fix:overflow hidden for text in icon-description

--- a/singolo1.css
+++ b/singolo1.css
@@ -219,6 +219,8 @@ html, body {
   font-size: 12px;
   margin-top: 8px;
   line-height: 1.8;
+  max-height: 63px;
+  overflow: auto;
 }
 
 .icon {
